grammar.txt


expression ::= term {( "-" | "+" ) term}
expression ::= expression {( "-" | "+" ) term | term

term ::= unary {( "/" | "*" ) powered}
term ::= term ( "/" | "*" ) powered | powered

powered ::= unary "^" powered | unary 

unary ::= ["+" | "-"] number

number ::= int | float | last_result | "(" expression ")"
